--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,21 +16,19 @@
         android:theme="@style/Theme.CalmCove"
         tools:targetApi="31">
         <activity
+            android:name=".category_selection"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SignUp"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".HelpActivity"
-            android:exported="true">
-        </activity>
-
-        <activity android:name=".MainActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
